# edk2-pytool-library

./: .coveragerc  .cspell.json  .flake8  .gitignore  BasicDevTests.py  ConfirmVersionAndTag.py  MANIFEST.in  azure-pipelines-pr-gate.yml  azure-pipelines-release.yml  license.txt  mkdocs.yml  pyproject.toml  pytest.ini  readme.md  requirements.publisher.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  doc_report.yml
.github/workflows/: CIRunner.yml  UnitTestRunner.yml  VariableProducer.yml  codeql-analysis.yml  codeql.yml  doc-release.yml  run-ci.yml  run-msv-ci.yml
azure-pipelines/: azure-pipelines-release.yml  azure-pipelines-test.yml  ubuntu-test-pr-ci.yml  windows-test-pr-ci.yml
azure-pipelines/templates/: auto-doc-job.yml
docgen/: generate.py  publish.py  regenerate.py
docs/: developing.md  publishing.md  using.md
docs/contributor/: developing.md  publishing.md  python_release.md
docs/features/: logging.ansi_handler.md  utility_functions.GetHostInfo.md  windows_firmware_policy.md
docs/user/: gen_api.py  index.md  requirements.txt
docs/user/features/: build_objects.md  edk2_db.md  windows_firmware_policy.md
edk2toollib/: gitignore_parser.py  gitingore_parser_test.py  utility_functions.py  utility_functions_test.py
edk2toollib/acpi/: __init__.py  dmar_parser.py  dmar_parser_test.py  ivrs_parser.py  ivrs_parser_test.py
edk2toollib/database/: __init__.py  edk2_db.py
edk2toollib/database/queries/: __init__.py  component_query.py  library_query.py  license_query.py  unused_component_query.py
edk2toollib/database/tables/: __init__.py  base_table.py  environment_table.py  inf_table.py  instanced_fv_table.py  instanced_inf_table.py  package_table.py  source_table.py
edk2toollib/log/: __init__.py  ansi_handler.py  file_handler.py  junit_report_format.py  junit_report_format_test.py  markdown_handler.py  string_handler.py  string_handler_test.py
edk2toollib/os/: uefivariablesupport.py
edk2toollib/qemu/: qemu_command_builder.py
edk2toollib/tests/: test_ansi_handler.py  test_authenticated_variables_structure_support.py  test_cat_generator.py  test_locate_tools.py  test_path_utilities.py  test_tpm2_stream.py  test_uefi_multi_phase.py  test_utility_functions.py
edk2toollib/tests/parsers/: IncludedDefinesChildConditional.fdf.inc  test_dmar_parser.py  test_dsc_parser.py  test_gitingore_parser.py
edk2toollib/tpm/: __init__.py  tcg_platform.py  tpm2_defs.py  tpm2_defs_test.py  tpm2_policy_calc.py  tpm2_policy_calc_test.py  tpm2_simulator.py  tpm2_stream.py  tpm2_stream_test.py
edk2toollib/uefi/: __init__.py  authenticated_variables_structure_support.py  authenticated_variables_structure_support_test.py  bmp_object.py  device_path.py  fmp_auth_header.py  fmp_capsule_header.py  fmp_capsule_header_test.py  pi_firmware_file.py  pi_firmware_volume.py  status_codes.py  status_codes_test.py  uefi_capsule_header.py  uefi_multi_phase.py  uefi_multi_phase_test.py  uefi_types.py  wincert.py
edk2toollib/uefi/edk2/: fmp_payload_header.py  ftw_working_block_format.py  guid_list.py  guid_list_entry_test.py  guid_list_test.py  path_utilities.py  path_utilities_test.py  test_path_utilities.py  variable_format.py  variable_format_test.py  variable_policy.py  variable_policy_test.py  variablestore_manulipulations.py
edk2toollib/uefi/edk2/build_objects/: __init__.py  dsc.py  dsc_recipe_translator.py  dsc_recipe_translator_test.py  dsc_test.py  dsc_translator.py  dsc_translator_test.py  fdf.py  fdf_translator.py  fdf_translator_test.py  readme.md  recipe.py  recipe_test.py  test_dsc_translator.py
edk2toollib/uefi/edk2/parsers/: __init__.py  accurate_dsc_parser.py  base_parser.py  base_parser_test.py  buildreport_parser.py  cper_head_parser.py  cper_section_head_parser.py  cper_section_parser.py  dec_parser.py  dec_parser_test.py  dsc_parser.py  dsc_parser_test.py  (+19 more)
edk2toollib/uefi/telem/: HeadersData.csv  Readme.md  cper_guid.py  cper_head_parser.py  cper_parser.py  cper_section_data.py  cper_section_data_parser.py  cper_section_head_parser.py  friendlynames.csv  parser_main.py  plugin_setup.py  testdata.csv
edk2toollib/windows/: locate_tools.py  locate_tools_test.py
edk2toollib/windows/capsule/: __init__.py  cat_generator.py  cat_generator_test.py  inf_generator.py  inf_generator2.py  inf_generator2_test.py  inf_generator_test.py  test_inf_generator2.py
edk2toollib/windows/policy/: __init__.py  firmware_policy.py  firmware_policy_test.py  firmware_policy_tool.py
edk2toollib/windows/telem/: cper_parser_tool.py  cper_parser_tool_test.py  cper_parsers.py  cper_parsers_test.py  cper_section_data.py  friendlynames.py  testdata.py
githooks/: advanced-pre-commit-config.yaml  basic-pre-commit-config.yaml
tests.unit/: test_ansi_handler.py  test_authenticated_variables_structure_support.py  test_bmp_object.py  test_cat_generator.py  test_device_path.py  test_dsc.py  test_dsc_translator.py  test_firmware_policy.py  test_fmp_capsule_header.py  test_guid_list.py  test_inf_generator.py  test_inf_generator2.py  test_junit_report_format.py  test_locate_tools.py  test_path_utilities.py  test_status_codes.py  test_string_handler.py  test_tcg_platform.py  test_tpm2_defs.py  test_tpm2_policy_calc.py  test_tpm2_stream.py  test_uefi_multi_phase.py  test_utility_functions.py  test_variable_format.py  test_variable_policy.py  test_wincert.py
tests.unit/database/: common.py  test_component_query.py  test_edk2_db.py  test_environment_table.py  test_inf_table.py  test_instanced_fv_table.py  test_instanced_inf_table.py  test_library_query.py  test_license_query.py  test_package_table.py  test_source_table.py  test_unused_component_query.py
tests.unit/parsers/: test_base_parser.py  test_dec_parser.py  test_dmar_parser.py  test_dsc_parser.py  test_fdf_parser.py  test_gitingore_parser.py  test_guid_parser.py  test_hash_file_parser.py  test_inf_parser.py  test_ivrs_parser.py  test_override_parser.py
tests.unit/parsers/__pycache__/: test_base_parser.cpython-311-pytest-8.1.1.pyc.36124
tests.unit/testdata/: certificate_blobs.py
(+137 files in other folders)
